# mayon

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/allocator/: Cargo.toml  allocator.rs  lib.rs
crates/allocator/global/: mod.rs  windows.rs
crates/allocator/system/: gnu.rs  miri.rs  mod.rs  unix.rs  windows.rs  windows_msvc.rs
crates/allocator/system/windows/: mod.rs  msvcrt.rs
crates/c_api/: CONTRIBUTING.md  Cargo.toml  build.rs
crates/c_api/include/: mayon.h
crates/c_api/src/: allocator.rs  conversions.rs  errors.rs  fallible_result.rs  lib.rs
crates/c_api/src/conversions/: instance.rs  mod.rs  string.rs  vulkan_version.rs
crates/core/: Cargo.toml  errors.rs  lib.rs
crates/core/backend/: create_error.rs  mod.rs  target_platform.rs  traits.rs
crates/core/backends/: mod.rs  traits.rs
crates/core/context/: create_error.rs  mod.rs
crates/core/instance/: alloc.rs  inner.rs  mod.rs
crates/core/logger/: level.rs  loggers.rs  macros.rs  mod.rs  target.rs
crates/helper_macros/: Cargo.toml  lib.rs
crates/mayon/: Cargo.toml  lib.rs
crates/mayon/src/: errors.rs  instance.rs  lib.rs
crates/mayon/src/backend/: mod.rs  traits.rs
crates/mayon/src/backend/vulkan/: backend.rs  mod.rs
crates/mayon/src/backend/vulkan/backend/: create.rs  mod.rs
crates/mayon/src/backend/vulkan/fn_table/: loader.rs  mod.rs
crates/mayon/src/backends/: create_error.rs  mod.rs  target_platform.rs  traits.rs
crates/mayon/src/backends/vulkan/: errors.rs  mod.rs
crates/mayon/src/backends/vulkan/backend/: create.rs  mod.rs
crates/mayon/src/backends/vulkan/fn_table/: mod.rs
crates/mayon/src/backends/vulkan/types/: allocation_callbacks.rs  application_info.rs  extensions_name.rs  instance.rs  instance_create_info.rs  mod.rs  result.rs  structure_type.rs  win32_surface_create_info.rs
crates/mayon/src/instance/: alloc.rs  inner.rs  logger.rs  mod.rs
crates/mayon_vulkan_backend/: Cargo.toml  errors.rs  lib.rs
crates/mayon_vulkan_backend/backend/: create.rs  create_context.rs  mod.rs
crates/mayon_vulkan_backend/context/: mod.rs
crates/mayon_vulkan_backend/fn_table/: function_name.rs  mod.rs
crates/mayon_vulkan_backend/types/: allocation_callbacks.rs  application_info.rs  bool32.rs  extensions_name.rs  handles.rs  instance_create_info.rs  layer_name.rs  layer_properties.rs  mod.rs  queue_family_properties.rs  result.rs  structure_type.rs  wayland_surface_create_info.rs  win32_surface_create_info.rs  xcb_surface_create_info.rs  xlib_surface_create_info.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: handler.rs  main.rs
crates/utils/: Cargo.toml  allocator.rs  errors.rs  inline_vec.rs  lib.rs
crates/utils/src/: allocator.rs  inline_vec.rs  lib.rs
