[package]
name = "mayon_core"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
default = ["error_location"]
error_location = []

[dependencies]
log = "0.4.29"

# workspace crates
bitflags.workspace = true
raw-window-handle.workspace = true
strum.workspace = true
thiserror.workspace = true

# internal crates
allocator = { path = "../allocator" }
utils = { path = "../utils" }
