[package]
name = "mayon"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
default = ["error_location"]
allocator = []
error_location = []

[dependencies]
# internal crates
allocator.path = "../allocator"
mayon_core.path = "../core"
mayon_vulkan_backend.path = "../mayon_vulkan_backend"
