[package]
name = "mayon_vulkan_backend"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[features]
default = ["error_location"]
error_location = []

[dependencies]
libloading = "0.9.0"
once_cell = "1.21.3"

# workspace dependencies
bitflags.workspace = true
raw-window-handle.workspace = true
strum.workspace = true
thiserror.workspace = true

# internal dependencies
allocator.path = "../allocator"
utils.path = "../utils"
mayon_core.path = "../core"
helper_macros.path = "../helper_macros"
